# csv-pivot

./: README.md  csv-pivot.cabal  performance.md  small.csv  test.csv
src/: Lib.hs
