name: csv-pivot
version: 0.1.0.0
cabal-version: >=1.10
build-type: Simple
license: BSD3
license-file: LICENSE
copyright: 2017 Author name here
maintainer: example@example.com
homepage: https://github.com/githubuser/csv-pivot#readme
category: Web
author: Author name here
extra-source-files:
    README.md

source-repository head
    type: git
    location: https://github.com/githubuser/csv-pivot

library
    exposed-modules:
        Lib
    build-depends:
        base >=4.7 && <5,
        cassava -any,
        vector -any,
        bytestring -any,
        binary -any,
        time -any
    default-language: Haskell2010
    hs-source-dirs: src

executable csv-pivot-exe
    main-is: Main.hs
    build-depends:
        base -any,
        csv-pivot -any
    default-language: Haskell2010
    hs-source-dirs: app
    ghc-options: -threaded -rtsopts -with-rtsopts=-N

test-suite csv-pivot-test
    type: exitcode-stdio-1.0
    main-is: Spec.hs
    build-depends:
        base -any,
        csv-pivot -any
    default-language: Haskell2010
    hs-source-dirs: test
    ghc-options: -threaded -rtsopts -with-rtsopts=-N
